--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,7 +125,7 @@ body {
     background-color: $primary-button;
     align-self: center;
     color: $background-color;
-    margin-top: 50px;
+    margin: 50px 0px 50px;
     &:hover {
       background: $primary-button-hover;
     }
